Modifier flags from keyboard were not propagated to pen events.

Ensure we mask on the current keyboard modifer state so that all
modifier keys can be detected.

BUG=783793

Change-Id: I0dd0cfaabc32f6a8df0cbea793bbac43dbe3dcb6
Reviewed-on: https://chromium-review.googlesource.com/766667
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516300}
Former-commit-id: 4ce3ca0f5b68783ccff971c399c1b89968258006