ui/views/win/pen_event_processor.cc
@@ -148,8 +148,8 @@ std::unique_ptr<ui::Event> PenEventProcessor::GenerateMouseEvent(
       NOTREACHED();
   }
   std::unique_ptr<ui::Event> event = std::make_unique<ui::MouseEvent>(
-      event_type, point, point, ui::EventTimeForNow(), flag, changed_flag,
-      pointer_details);
+      event_type, point, point, ui::EventTimeForNow(),
+      flag | ui::GetModifiersFromKeyState(), changed_flag, pointer_details);
   event->AsMouseEvent()->SetClickCount(click_count);
   return event;
 }
@@ -188,7 +188,8 @@ std::unique_ptr<ui::Event> PenEventProcessor::GenerateTouchEvent(
   if (rotation_angle < 0)
     rotation_angle += 180;
   std::unique_ptr<ui::Event> event = std::make_unique<ui::TouchEvent>(
-      event_type, point, event_time, pointer_details, flags, rotation_angle);
+      event_type, point, event_time, pointer_details,
+      flags | ui::GetModifiersFromKeyState(), rotation_angle);
   event->latency()->AddLatencyNumberWithTimestamp(
       ui::INPUT_EVENT_LATENCY_ORIGINAL_COMPONENT, 0, 0, event_time, 1);
   return event;
